--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.1",
-    "@angular/cdk": "14.1.1",
-    "@angular/common": "14.1.1",
-    "@angular/compiler": "14.1.1",
-    "@angular/core": "14.1.1",
-    "@angular/forms": "14.1.1",
+    "@angular/animations": "^14.1.1",
+    "@angular/cdk": "^14.1.1",
+    "@angular/common": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
     "@angular/material": "^14.1.1",
-    "@angular/platform-browser": "14.1.1",
-    "@angular/platform-browser-dynamic": "14.1.1",
-    "@angular/router": "14.1.1",
-    "@types/jasmine": "4.0.3",
-    "rxjs": "7.5.6",
-    "tslib": "2.4.0",
-    "zone.js": "0.11.7"
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
+    "@types/jasmine": "^4.0.3",
+    "rxjs": "^7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.7"
   },
   "scripts": {
     "ng": "ng",
